# osu-replayer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Caddyfile  Dockerfile  LICENSE  README.md  flake.nix
.github/workflows/: main.yml
libs/: CMakeLists.txt
libs/httplib/: CMakeLists.txt
libs/httplib/include/: httplib.h
res/: data.conf  example.osr  example.txt  shaders.conf
res/shaders/: circleobject.frag  circleobject.vert  minimal.frag  minimal.vert  sliderbody.frag  sliderbody.vert
src/: analysed_beatmap.cpp  analysed_beatmap.h  analysed_replay.cpp  analysed_replay.h  api_manager.cpp  api_manager.h  beatmap_info_provider.h  beatmap_reader.cpp  beatmap_reader.h  bindable.h  circleobject_renderer.cpp  circleobject_renderer.h  component.h  config_manager.cpp  config_manager.h  coordinate_converter.cpp  coordinate_converter.h  data_reader.cpp  data_reader.h  hitobjects.h  index.html  line_renderer.cpp  line_renderer.h  main.cpp  notification_manager.cpp  notification_manager.h  play_container.cpp  play_container.h  playfield_coordinate_provider.h  replay_beatmap_matcher.h  replay_container.cpp  replay_container.h  replay_loader.cpp  replay_loader.h  slider.cpp  slider.h  slider_draw.html  slider_renderer.cpp  slider_renderer.h  string_helpers.cpp  (+8 more)
src/data/: analysed_beatmap.cpp  analysed_beatmap.h  analysed_replay.h  beatmap_info_provider.h  beatmap_reader.cpp  beatmap_reader.h  hitobjects.h  play_container.cpp  play_container.h  replay_beatmap_matcher.cpp  replay_beatmap_matcher.h  replay_loader.cpp  replay_loader.h
src/features/: api_manager.cpp  api_manager.h  config_manager.cpp  config_manager.h  notification_manager.h
src/playfield/: border.cpp  border.h  mouse_provider.cpp  mouse_provider.h  playback_logic.cpp  playback_logic.h  playfield_coordinate_provider.cpp  playfield_coordinate_provider.h  playfield_size_manager.cpp  playfield_size_manager.h  visible_hitobjects_manager.cpp  visible_hitobjects_manager.h
src/render/: circleobject_renderer.cpp  circleobject_renderer.h  coordinate_converter.cpp  coordinate_converter.h  drawable.h  drawable_circle.h  drawable_slider.h  line_renderer.cpp  line_renderer.h  slider_renderer.cpp  slider_renderer.h  vertex_generate.cpp  vertex_generate.h
src/render/shaders/: circleobject_shader.cpp  circleobject_shader.h  minimal_shader.cpp  minimal_shader.h  sliderbody_shader.cpp  sliderbody_shader.h
src/shaders/: circleobject_shader.cpp  circleobject_shader.h  minimal_shader.cpp  sliderbody_shader.cpp  sliderbody_shader.h
src/util/: component.h  string_helpers.h  vector_util.h
